# netpulse-monitor

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  monitor-and-deploy.yml
config/: monitors.example.yml  monitors.yml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/data/: history.json  incidents.json  status.json
frontend/src/: App.test.ts  App.vue
frontend/src/assets/: main.css
frontend/src/components/: AvailabilityStrip.vue  DashboardSkeleton.vue  IncidentTimeline.vue  LatencyChart.vue  MonitorCard.vue  MonitorDrawer.vue  StatusBadge.vue  components.test.ts
frontend/src/composables/: useDashboardData.ts
frontend/src/services/: data.test.ts  data.ts
frontend/src/test/: fixtures.ts  setup.ts
frontend/src/types/: contracts.ts
frontend/src/utils/: format.test.ts  format.ts
monitor/netpulse/: __init__.py  cli.py  config.py  demo.py  history.py  incidents.py  models.py  notifications.py  public_data.py  runner.py  sanitization.py  state.py
monitor/netpulse/checks/: __init__.py  base.py  dns.py  http.py  json_api.py  keyword.py  tcp.py  tls.py
scripts/: prepare_pages_data.py  restore_previous_data.py
tests/: conftest.py  test_checks.py  test_config.py  test_history.py  test_notifications.py  test_public_data.py  test_sanitization.py  test_state.py
