[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "netpulse-monitor"
version = "1.0.0"
description = "Monitoramento serverless de disponibilidade para GitHub Pages"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Jones Cabral" }]
dependencies = [
  "httpx>=0.28,<1",
  "pydantic>=2.10,<3",
  "PyYAML>=6.0.2,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "respx>=0.22,<1",
  "ruff>=0.11,<1",
]

[project.scripts]
netpulse = "netpulse.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["monitor/netpulse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["frontend"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
